--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -40,10 +40,12 @@ FUNCREFFILES = funcref_html.xml funcref_php.xml funcref_css.xml funcref_python.x
 
 all: $(DEFAULTFILES)
 	sed -e 's!ICONDIR!$(iconpath)!' < bluefish.desktop.in > bluefish.desktop
-ifdef HAVE_GNOME_VFS
-	sed -e 's!EXPECT_URIS!true!' -e 's!SUPPORTED_URI_SCHEMES!file,http,ftp,sftp,smb!' < bluefish.applications.in > bluefish.applications
-else
-	sed -e 's!EXPECT_URIS!false!' -e 's!SUPPORTED_URI_SCHEMES!!' < bluefish.applications.in > bluefish.applications
+	if "x${HAVE_GNOME_VFS}" = "xyes" ; then \
+		sed -e 's!EXPECT_URIS!true!' -e 's!SUPPORTED_URI_SCHEMES!file,http,ftp,sftp,smb!' < bluefish.applications.in > bluefish.applications ;\
+	else \
+		sed -e 's!EXPECT_URIS!false!' -e 's!SUPPORTED_URI_SCHEMES!!' < bluefish.applications.in > bluefish.applications ;\
+	fi
+
 endif
 
 install-gnome1-menu:
