--- a/debian/control
+++ b/debian/control
@@ -19,3 +19,6 @@ Description: A Gtk+ HTML editor
  For validation to work you need weblint.  For preview to work,
  you need a web browser that can view local files given to it
  on the command line.
+ .
+ Homepage: http://bluefish.openoffice.nl/
+
