--- a/bluefish/debian/control
+++ b/bluefish/debian/control
@@ -2,21 +2,21 @@ Source: bluefish
 Maintainer: Davide Puricelli (evo) <evo@debian.org>
 Section: web
 Priority: optional
-Build-Depends: debhelper, autoconf, libgtk2.0-dev, gettext, libtool, libatk1.0-dev, libfreetype6-dev, libglib2.0-dev, zlib1g-dev, libpcre3-dev, libaspell-dev
-Standards-Version: 3.5.8.0
+Build-Depends: debhelper (>= 4), autoconf, automake1.7 | automaken, autotools-dev, gettext, libart-2.0-dev, libaspell-dev, libatk1.0-dev, libbonobo2-dev, libbonoboui2-dev, libc6-dev (>= 2.3.2), libfreetype6-dev, libgconf2-dev, libglib2.0-dev, libgnome2-dev, libgnomecanvas2-dev, libgnomeui-dev, libgnomevfs2-dev, libgtk2.0-dev, libpcre3-dev, libtool, libxalan2-java, libxml2-dev, libxml2-utils, zlib1g-dev
+Standards-Version: 3.6.1.1
 
 Package: bluefish
 Architecture: any
 Depends: ${shlibs:Depends}
-Suggests: www-browser, weblint
-Description: A Gtk+ HTML editor
+Suggests: galeon | mozilla | www-browser, weblint, libxml2-utils
+Description: advanced Gtk+ HTML editor
  Bluefish is a GTK HTML editor for the experienced web designer.
  Its features include nice wizards for startup, tables and frame; a
  fully featured image insert dialog; thumbnail creation and automatically
  linking of the thumbnail with the original image; and configurable HTML
  syntax highlighting.
  .
- For validation to work you need weblint.  For preview to work,
+ For validation to work you need weblint and xmllint. For preview to work,
  you need a web browser that can view local files given to it
  on the command line.
  .
