--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: bluefish
 Maintainer: Davide Puricelli (evo) <evo@debian.org>
 Section: web
 Priority: optional
-Build-Depends: debhelper (>= 4), autoconf, automake1.7 | automaken, autotools-dev, gettext, libart-2.0-dev, libaspell-dev, libatk1.0-dev, libbonobo2-dev, libbonoboui2-dev, libc6-dev (>= 2.3.2), libfreetype6-dev, libgconf2-dev, libglib2.0-dev, libgnome2-dev, libgnomecanvas2-dev, libgnomeui-dev, libgnomevfs2-dev, libgtk2.0-dev, libpcre3-dev, libtool, libxalan2-java, libxml2-dev, libxml2-utils, zlib1g-dev
+Build-Depends: debhelper (>= 4), autoconf, automake1.7 | automaken, autotools-dev, gettext, libart-2.0-dev, libaspell-dev, libatk1.0-dev, libbonobo2-dev, libbonoboui2-dev, libc6-dev (>= 2.3.2), libfreetype6-dev, libgconf2-dev, libglib2.0-dev, libgnome2-dev, libgnomecanvas2-dev, libgnomeui-dev, libgnomevfs2-dev, libgtk2.0-dev, libpcre3-dev, libtool, libxml2-dev, zlib1g-dev
 Standards-Version: 3.6.1.1
 
 Package: bluefish
