--- a/src/config.h.in
+++ b/src/config.h.in
@@ -97,11 +97,14 @@
 /* have atleast gtk-2.4 */
 #undef HAVE_ATLEAST_GTK_2_4
 
+/* have atleast gtk-2.6 */
+#undef HAVE_ATLEAST_GTK_2_6
+
 /* have atleast gnome-vfs-2.2 */
 #undef HAVE_ATLEAST_GNOMEVFS_2_2
 
-/* have atleast gnome-vfs-2.5 */
-#undef HAVE_ATLEAST_GNOMEVFS_2_5
+/* have atleast gnome-vfs-2.6 */
+#undef HAVE_ATLEAST_GNOMEVFS_2_6
 
 /* have atleast libgnome-2.6 */
 #undef HAVE_ATLEAST_GNOMEUI_2_6
